# crypto_quant_trader

./: .env.bak.20260222_101732  .env.example  .gitignore  README.md  pyproject.toml  step-alt-1-improvements.md  step-alt-10.md  step-alt-11.md  step-alt-12.md  step-alt-13.md  step-alt-14.md  step-alt-15.md  step-alt-16.md  step-alt-2-improvements.md  step-alt-3-improvements.md  step-alt-3-review-report.md  step-alt-4.md  step-alt-5.md  step-alt-6.md  step-alt-7.md  step-alt-8.md  step-alt-9.md  step-altdata-realtime-report.md  step-altdata-result-report.md  step0-1.md  step0.md  step1.md  step10.md  step11-fix-ip-whitelist.md  step11-verify.md  step11.md  step2.md  step3.md  step4.md  step5-1.md  step5-2.md  step5-3.md  step5-4.md  step5-5.md  step5-6.md  (+11 more)
.devcontainer/: devcontainer.json  docker-compose.yml
.streamlit/: config.toml
app/: __main__.py  bot.py  config.py  dashboard.py
app/altdata/: __init__.py  binance_rest.py  binance_ws.py  coinglass_rest.py  runner.py  writer.py
app/barrier/: controller.py
app/db/: init_db.py  migrate.py  models.py  session.py  writer.py
app/diagnostics/: altdata_check.py  coinglass_check.py  continuity_check.py  feature_check.py  feature_leak_check.py  prune_altdata.py  realtime_check.py
app/evaluator/: evaluator.py
app/exchange/: e2e_test.py  paper_test_smoke.py  reconcile.py  (+4 more)
scripts/: activate_env_keys.py  export_dataset.py  run_bot_forever.sh  run_full_eval_alt15.sh  run_pipeline_checks.sh  setup_always_on.sh  snapshot_health.sh  train_and_trade_econ_gate.py  train_regression_baseline.py  walkforward_ridge.py
(+80 files in other folders)
