[tool.poetry]
name = "btc-quant-bot"
version = "0.1.0"
description = "BTC quant trading prototype (v0 scaffold)"
authors = ["dev <dev@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
websockets = "^12.0.0"
sqlalchemy = "^2.0.0"
psycopg = {version = "^3.1.0", extras = ["binary"]}
streamlit = "^1.0.0"
pandas = "^2.0.0"
httpx = "^0.28.1"
pyjwt = "^2.11.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
black = "^24.0.0"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
